[build-system]
requires = ["setuptools >= 72", "setuptools-scm >= 8.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# You should update the version here!
# Typically, the version number should be greater than the latest release version, which can be found in the most recent
# version tag. A trailing `dev0` should be included.
fallback_version = "2.1.3dev0"

[project]
name = "dftpy"
description = "Python packages for Density Functional Theory"
readme = "README.md"
license-files = [ "LICENSE.txt" ]
dynamic = [ "version" ]
maintainers = [
	{ name = "Pavanello Research Group", email = "m.pavanello@rutgers.edu" },
	{ name = "Xuecheng Shao",            email = "shaoxc@jlu.edu.cn" },
]
requires-python = ">=3.9"
classifiers = [
	'Development Status :: 3 - Alpha',
	'Intended Audience :: Science/Research',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3.9',
	'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
	'Programming Language :: Python :: 3.12', # some optional dependencies are not available for this version
	'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Physics',
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
	"numpy>=1.11.0",
	"scipy>=0.18.0",
	"ase>=3.22.0",
	"xmltodict>=0.12.0",
]

[project.urls]
homepage = "https://gitlab.com/pavanello-research-group/dftpy"
documentation = "http://dftpy.rutgers.edu"
source = "https://gitlab.com/pavanello-research-group/dftpy"

[project.scripts]
dftpy = 'dftpy.cui.main:main'

[project.optional-dependencies]
extra = [
	"dftd4>=3.7.0",
	"ipyvolume>=0.6.3",
	"numexpr>=2.10.2",
	"pyfftw>=0.14.0",
	"pymatgen>=2024.8.9",
	"scikit-image>=0.24.0",
	"upf-to-json>=0.9.5",
]
mpi = [
    "mpi4py>=4.0.3",
    "mpi4py-fft>=2.0.6",
]

[dependency-groups]
docs = [
    "nbsphinx>=0.9.7",
    "pandoc>=2.4",
    "sphinx>=7.4.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-inline-tabs>=2023.4.21",
    "sphinx-panels>=0.4.1",
    "sphinx-rtd-theme>=3.0.2",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mpi>=0.6",
]
# Add these for the future use.
# Currently, this project include too many warnings, and we can't use these linters in CI/CD workflows.
linters = [
	"mypy",
	"ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["README.md", "LICENSE.txt"]
"dftpy" = ["*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
	"--verbose",
	"--strict-markers",
	"--strict-config",
	"-ra"
]
testpaths = "tests"
